@@ -323,7 +323,7 @@ class CoursePress_Admin_Assessment extends CoursePress_Admin_Controller_Menu {
 		$found_students = array();
 		$units = CoursePress_Data_Course::get_units_with_modules( $course_id );
 		$assessable = array();
-		$passing_grade = 100;
+
 		$module_count = array();
 
 		foreach ( $student_ids as $student_id ) {
@@ -416,7 +416,6 @@ class CoursePress_Admin_Assessment extends CoursePress_Admin_Controller_Menu {
 				$length = 'all' === $unit_id ? $unit_found : count( $assessable );
 				$student_grade = $length > 0 && $student_grade > 0 ? ceil( $student_grade / $length ) : 0;
 				$minimum_grade = $length > 0 && $minimum_grade > 0 ? ceil( $minimum_grade / $length ) : 0;
-				$passing_grade = $minimum_grade;
 
 				$passed = $student_grade > 0 && $minimum_grade > 0 && $student_grade >= $minimum_grade;
 
@@ -435,7 +434,7 @@ class CoursePress_Admin_Assessment extends CoursePress_Admin_Controller_Menu {
 		return array(
 			'students' => $student_ids,
 			'assessable' => 'all' === $unit_id ? count( $module_count ) : count( $assessable ),
-			'passing_grade' => $passing_grade,
+			'passing_grade' => CoursePress_Data_Course::get_setting( $course_id, 'minimum_grade_required', 100 ),
 		);
 
 	}
@@ -570,7 +569,11 @@ class CoursePress_Admin_Assessment extends CoursePress_Admin_Controller_Menu {
 			}
 		} else {
 			$results = self::filter_students( $course_id, $the_unit, $type );
-		}
+        }
+
+
+l($results);
+
 
 		$students = $results['students'];
 		$total = count( $students );
